# simpletin

./: .gitignore  AUTHORS  CMakeLists.txt  kbtin_config.h.in  malloc.h  prof.c  run.c  tintin.h  user_tty.c
cmake/: FindLua51.cmake  FindNsl.cmake  FindPCRE.cmake  FindResolve.cmake  FindSocket.cmake  FindUtil.cmake
include/: action.h  alias.h  antisub.h  bind.h  chinese.h  colors.h  commands.h  crc.h  events.h  files.h  glob.h  hash.h  help.h  highlight.h  history.h  hooks.h  ivars.h  kbtin_config.h.in  llist.h  load_commands.h  malloc.h  misc.h  net.h  parse.h  path.h  print.h  prof.h  regexp.h  routes.h  run.h  session.h  ssl.h  substitute.h  telnet.h  ticks.h  tintin.h  translit.h  trigger.h  ui.h  unicode.h  (+6 more)
include/scripting/: lua.h
src/: CMakeLists.txt  action.c  alias.c  ansi2html.c  ansi2txt.c  antisub.c  bind.c  chinese.c  colors.c  crc.c  events.c  files.c  glob.c  hash.c  help.c  highlight.c  history.c  hooks.c  ivars.c  llist.c  main.c  misc.c  net.c  parse.c  path.c  print.c  prof.c  regexp.c  routes.c  run.c  session.c  ssl.c  substitute.c  telnet.c  ticks.c  trigger.c  ttyrec2ansi.c  unicode.c  user.c  user_pipe.c  (+4 more)
src/scripting/: common.c  init.c  network.c  session.c  terminal.c  trigger.c
